--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -312,3 +312,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="Plant",NewName="Interactable")
 
+[/Script/AIModule.AISystem]
+bForgetStaleActors=True
+
